# portfolio

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  tailwind.config.js  uwsgi.ini
.woodpecker/: docker.yaml
config/: settings.py  urls.py  wsgi.py
main/: urls.py  views.py
main/static/css/: input.css  style.css
main/static/font/: info.txt
main/static/js/: script.js
main/templates/: base.html  footer.html  header.html  home.html  robots.txt  sitemap.xml
