[project]
name = "main"
version = "0.1.0"
description = "My electronic portfolio."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "django>=5.1.3,<6",
    "django-types>=0.19.1,<0.20",
    "python-decouple~=3.8",
    "uwsgi>=2.0.28,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
